Solved issue with whitespace, added better responsiveness for mobile devices

--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@ html {
 
 .wrapper {
   display: grid;
-  grid-template-columns: 0.2fr 1fr 0.2fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 0.5fr 3fr 0.5fr 4fr 4fr 4fr;
   grid-template-areas:
-    "sidebar header sidebar-right"
-    "sidebar main sidebar-right"
-    "sidebar footer sidebar-right"
-    "sidebar projects sidebar-right"
-    "sidebar experience sidebar-right"
-    "sidebar contact sidebar-right";
+    "header"
+    "main"
+    "footer"
+    "projects"
+    "experience"
+    "contact";
 }
 
 header {
@@ -33,23 +33,21 @@ main {
   display: flex;
   background-color: #111;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
 }
 
 footer {
   grid-area: footer;
+  display: flex;
   background-color: #111;
   border-top: 3px solid #61dbfb;
 }
 
-.sidebar-right {
-  grid-area: sidebar-right;
-  background-color: #111;
-}
-
 .sidebar {
-  grid-area: sidebar;
+  display: flex;
+  align-self: start;
+  justify-content: start;
   z-index: 1;
   top: 0;
   left: 0;
@@ -58,18 +56,32 @@ footer {
   transition: 0.5s;
 }
 
-.sidebar img {
-  margin-left: 3.125em;
+.links {
+  display: flex;
+  flex-direction: column;
+
+  position: fixed;
+}
+
+.sidebar-mobile {
+  display: none;
+}
+
+.links-mobile {
+  display: none;
+}
+
+main img {
   height: 9.375em;
   width: 9.375em;
+  margin-left: 4em;
   border-radius: 50%;
 }
 
 .sidebar a {
-  margin-left: 2.5em;
   padding: 4em 0.5em 0.5em 2em;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: #61dbfb;
   display: block;
   transition: 0.3s;
@@ -79,19 +91,23 @@ footer {
   color: #f1f1f1;
 }
 
-.links {
-  position: fixed;
-}
-
 #typing-text {
   color: white;
-  font-size: 3.5rem;
+  font-size: 1.9rem;
   white-space: pre-wrap;
 }
 
 #fixed-text {
   color: #61dbfb;
   font-size: 15rem;
+}
+
+.texts {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 20%;
+  height: 40%;
 }
 
 #projects {
@@ -108,6 +124,10 @@ footer {
 #projects h1 {
   color: #61dbfb;
   font-size: 6rem;
+}
+
+#h1-typing-text {
+  display: flex;
 }
 
 #projects li {
@@ -133,6 +153,7 @@ footer {
 
 #experience li {
   font-size: 3rem;
+  list-style: none;
 }
 
 #contact {
@@ -157,11 +178,11 @@ footer {
   transform: scale(1.5);
 }
 
-.fa-brands h2 {
+.fa-brands p {
   font-size: 1rem;
 }
 
-.fa-regular h2 {
+.fa-regular p {
   font-size: 1rem;
 }
 
@@ -197,21 +218,20 @@ footer {
 
 .li-container {
   display: flex;
-  width: 50em;
 }
 
 @media only screen and (max-width: 480px) {
   .wrapper {
     display: grid;
-    grid-template-columns: 0.2fr 1fr 0.2fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 0.5fr 3fr 0.5fr 4fr 4fr 4fr;
     grid-template-areas:
-      "sidebar header sidebar-right"
-      "sidebar sidebar sidebar-right"
-      "sidebar footer sidebar-right"
-      "sidebar projects sidebar-right"
-      "sidebar experience sidebar-right"
-      "sidebar contact sidebar-right";
+      "header"
+      "main"
+      "footer"
+      "projects"
+      "experience"
+      "contact";
   }
 
   #typing-text {
@@ -240,20 +260,23 @@ footer {
   }
 
   .links {
-    display: flex;
-    flex-direction: column;
+    display: none;
   }
 
   .sidebar {
-    position: relative;
-    grid-area: sidebar;
-    z-index: 1;
-    top: 0;
-    left: 0;
+    display: none;
+  }
+
+  .sidebar-mobile {
+    display: flex;
     background-color: #111;
-    overflow-x: hidden;
     padding-top: 60px;
     transition: 0.5s;
+  }
+
+  .links-mobile {
+    display: flex;
+    flex-direction: column;
   }
 
   .sidebar img {
@@ -263,7 +286,7 @@ footer {
     border-radius: 50%;
   }
 
-  .sidebar a {
+  .sidebar-mobile a {
     margin-left: 40px;
     padding: 64px 8px 8px 32px;
     text-decoration: none;
@@ -271,5 +294,10 @@ footer {
     color: #61dbfb;
     display: block;
     transition: 0.3s;
+  }
+
+  #projects h1 {
+    color: #61dbfb;
+    font-size: 4rem;
   }
 }
